@@ -8,6 +8,7 @@ xx/xx/xx
 * Fixed stream setting for all versions of ffmpeg (mp4 export crash)
 * Fixed crash when doing manual registration of sequence with variable image sizes (now disabled)
 * Added special formatter to parse date-time in path parsing
+* Added better handling of special characters in sequence name during conversion
 * Changed Windows to build in console mode even for stable releases
 * Changed gnuplot initialization to keep plots open after stopping main process (and fixed leak)
 * Improved clipping model in luminance-based GHS stretches
